--- a/includes/before-head-end.html
+++ b/includes/before-head-end.html
@@ -94,9 +94,10 @@
   </style>
     <header>
         <a href="https://bloomer.dev/feed/" target="_blank">Health News</a>
-        <a href="https://bloomer.dev/map" target="_blank">NHS Map</a>
-	      <a href="https://odsportal.digital.nhs.uk/Organisation/Search" target="_blank">ODS Portal</a>
-        <a href="https://github.com/mbloomer04/feed" target="_blank">Source</a>
+        <a href="https://bloomer.dev/map">Trust Map</a>
+	<a href="https://bloomer.dev/gpmap">GP Map</a>
+	<a href="https://www.odsdatasearchandexport.nhs.uk/">ODS Portal</a>
+        <a href="https://github.com/mbloomer04/" target="_blank">Source</a>
         <a href="https://bloomer.dev" target="_blank">Contact</a>
     </header>
 <p> Click the date to collapse or expand all entries </p>
